// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="main__header"
>
  <div
    className="bp3-navbar navBar bp3-dark"
  />
</div>
`;

exports[`should render correctly with header close in mobile view 1`] = `
<div
  className="main__header main__header--mobile"
>
  <div
    className="bp3-navbar navBar bp3-dark"
  />
  <div
    className="main__header__target"
  />
</div>
`;

exports[`should render correctly with header open in mobile view 1`] = `
<div
  className="main__header main__header--mobile main__header--mobile--open"
>
  <div
    className="bp3-navbar navBar bp3-dark"
  />
</div>
`;

exports[`should render with navigation tabs 1`] = `
<div
  className="main__header"
>
  <Blueprint3.Navbar
    className="navBar bp3-dark"
  >
    <Blueprint3.NavbarGroup
      align="left"
      className="navBar__group"
      key="0"
    >
      <WithEnv
        href="/"
        icon={null}
        iconPath="AURAN-logo-blanc.svg"
        id="welcome"
        key="Accueil"
        label="Accueil"
      />
      <WithEnv
        href="/{{VIEW_ROOT_PATH}}/foo"
        icon="icon"
        iconPath="logo"
        id="nav-foo"
        key="foo"
        label="foo"
      />
      <WithEnv
        href="/{{VIEW_ROOT_PATH}}/bar"
        icon="icon"
        iconPath="heatmap.svg"
        id="nav-bar"
        key="bar"
        label="bar"
      />
    </Blueprint3.NavbarGroup>
    <Blueprint3.NavbarGroup
      align="left"
      className="navBar__group"
      key="1"
    />
    <Blueprint3.NavbarGroup
      align="left"
      className="navBar__group"
      key="2"
    >
      <Component
        iconPath="info-sign.svg"
        id="nav-partenaires"
        key="Mentions légales"
        label="Mentions légales"
      />
    </Blueprint3.NavbarGroup>
  </Blueprint3.Navbar>
</div>
`;
